# inkling

./: App.tsx  CLAUDE.md  PluginConfig.json  index.js  pendingButton.js
components/: BackgroundService.ts  CropOverlay.tsx  FileLogger.ts  FilePicker.tsx  FilePickerBridge.ts  FloatingBubbleBridge.ts  FloatingToolbarBridge.ts  ImageEnhancer.ts  InklingCoreBridge.ts  LassoExtractor.ts  LocalSendBridge.ts  NativePageCheckerBridge.ts  OrientationBridge.ts  ScreenshotService.ts  StagingService.ts  StitchEditor.tsx  StitchSession.ts  TextInserter.ts  ToolActions.ts  ToolPresets.ts  i18n.ts  types.ts
components/screens/: AdvancedScreen.tsx  ConfigureScreen.tsx  HomeScreen.tsx  ProgressScreen.tsx  ResultScreen.tsx
components/ui/: Button.tsx  Card.tsx  NumberInput.tsx  Segmented.tsx  SwitchRow.tsx  TitleBar.tsx  Touchable.tsx  theme.ts
cpp/: CMakeLists.txt
cpp/cli/: CMakeLists.txt  main.cpp
cpp/inkling/: api.cpp  document.h  logger.h  options.cpp  options.h  pipeline.cpp  pipeline.h
cpp/inkling/encode/: jpeg.cpp  jpeg.h
cpp/inkling/include/inkling/: api.h
cpp/inkling/layout/: geometry.h  horizontal_layout.cpp  horizontal_layout.h  line_box.h  vertical_layout.cpp  vertical_layout.h
cpp/inkling/parser/: docx_parser.cpp  docx_parser.h  epub_parser.cpp  epub_parser.h  md_parser.cpp  md_parser.h  pdf_parser.cpp  pdf_parser.h  txt_parser.cpp  txt_parser.h
cpp/inkling/pdf/: pdf_builder.cpp  pdf_builder.h
cpp/inkling/render/: font_face.cpp  font_face.h  page_raster.cpp  page_raster.h
cpp/inkling/util/: thread_pool.cpp  thread_pool.h  zip_reader.cpp  zip_reader.h
docs/: architecture.md  milestones.md
docs/decisions/: 0001-template-from-quicktoolbar.md  0002-cpp-core-with-ndk.md
main/: AndroidManifest.xml
main/cpp/: CMakeLists.txt  jni_bridge.cpp
main/java/com/supernote_quicktoolbar/: BroadcastBridgeModule.kt  BroadcastBridgePackage.kt  FilePickerModule.kt  FilePickerPackage.kt  FloatingBubbleModule.kt  FloatingBubblePackage.kt  FloatingToolbarModule.kt  FloatingToolbarPackage.kt  ImageEnhancerModule.kt  ImageEnhancerPackage.kt  InklingCoreModule.kt  InklingCorePackage.kt  InklingNative.kt  LocalSendModule.kt  LocalSendPackage.kt  MainActivity.kt  MainApplication.kt  NativeImagePanel.kt  NativeLassoScreenshotPanel.kt  NativeLocale.kt  NativePageCheckerModule.kt  NativePageCheckerPackage.kt  NativeScreenshotPanel.kt  NativeSendPanel.kt  OrientationModule.kt  OrientationPackage.kt  ScreenshotModule.kt  ScreenshotPackage.kt
main/res/values/: strings.xml
